deploy issues for public body - align doc icon and link, medium weight for contact headings (#724)

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-public-body.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-public-body.scss
@@ -268,7 +268,7 @@
           margin: 0;
         }
         p.title {
-          font-weight: bold;
+          @include fs-title-5;
         }
         &::after {
           content: ' ';
@@ -360,13 +360,16 @@
           display: inline-block;
           margin-right: 10px;
         }
-        .document a.no-link {
-          text-decoration: underline;
-          opacity: 0.65;
-          color: $c-slate;
+        .document {
+          vertical-align: top;
+          a.no-link {
+            text-decoration: underline;
+            opacity: 0.65;
+            color: $c-slate;
 
-          &:hover {
-            color: inherit;
+            &:hover {
+              color: inherit;
+            }
           }
         }
 
